--- a/src/styles/Slider.module.scss
+++ b/src/styles/Slider.module.scss
@@ -2,7 +2,6 @@
 
 .swiper {
     width: 100%;
-    height: 100%;
 }
 
 .swiper_slide {
